--- a/retrieve.ipynb
+++ b/retrieve.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,10 +43,14 @@
     "        Document(\n",
     "            page_content=f\"{g['dataType']} - {g['type']} {g['subject']} : {g['title']} {(g['url'])}\",\n",
     "            metadata={\n",
-    "                \"url\": g[\"url\"],\n",
+    "                \"dataType\": g[\"dataType\"],\n",
     "                \"type\": g[\"type\"],\n",
     "                \"subject\": g[\"subject\"],\n",
     "                \"title\": g[\"title\"],\n",
+    "                \"category\": g[\"category\"],\n",
+    "                \"summary\": g[\"summary\"],\n",
+    "                \"url\": g[\"url\"],\n",
+    "                \"guideid\": g[\"guideid\"],\n",
     "            },\n",
     "        )\n",
     "        for g in guides\n",
@@ -64,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -83,16 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Coco\\Desktop\\TB\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "retriever = index_guides_embeddings(guides)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Coco\\AppData\\Local\\Temp\\ipykernel_8220\\3923095807.py:4: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "C:\\Users\\Coco\\AppData\\Local\\Temp\\ipykernel_6552\\3923095807.py:4: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
       "  results = retriever.get_relevant_documents(question)\n"
      ]
     }
@@ -134,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,10 +160,14 @@
     "        Document(\n",
     "            page_content=f\"{g['dataType']} - {g['type']} {g['subject']} : {g['title']} {(g['url'])}\",\n",
     "            metadata={\n",
-    "                \"url\": g[\"url\"],\n",
+    "                \"dataType\": g[\"dataType\"],\n",
     "                \"type\": g[\"type\"],\n",
     "                \"subject\": g[\"subject\"],\n",
     "                \"title\": g[\"title\"],\n",
+    "                \"category\": g[\"category\"],\n",
+    "                \"summary\": g[\"summary\"],\n",
+    "                \"url\": g[\"url\"],\n",
+    "                \"guideid\": g[\"guideid\"],\n",
     "            },\n",
     "        )\n",
     "        for g in guides\n",
@@ -168,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +296,9 @@
       "\n",
       "It restarts, things look normal, still running kinda slow and I start looking for something on my phone, go back to my laptop and the mouse isn't moving. I see it's been frozen for about 3 minutes, cause the clock hasn't moved. From then on I tried turning it off, trying again, but it just freezes. I tried closing the laptop, the same screen is still there. The weird blue screen comes again.\n",
       "\n",
-      "What do I do? --COMMENTS-- : Might be a mining virus. Check your task manager to see if your pc uses CPU, GPU or HDD at or around %100 capacity and which application uses it if it does.\n",
+      "What do I do?\n",
+      "COMMENTAIRES:\n",
+      "Might be a mining virus. Check your task manager to see if your pc uses CPU, GPU or HDD at or around %100 capacity and which application uses it if it does.\n",
       "[deleted]\n",
       "It’s speaking Minecraft enchantment table. Not sure what to do.\n",
       "[deleted]\n",
@@ -343,7 +362,9 @@
       "\n",
       "Edit: Ok, so I followed the malware guide, since I don't have anywhere to backup all my data for a fresh install and things ran pretty normal. But now I noticed that it freezes when I click with the touchpad and now the screen is here again. Any tips on how to wipe the touchpad data/external mouse or something? The CPU still gets pretty high, but it's from a combination of apps.\n",
       "\n",
-      "Edit 2: So, I disabled the touchpad in setting, but when I was watching youtube and touched it, it made a drill bit kinda sound. When I did a big swipe, it freezed and the sound kept going indefinitely so I turned of the computer. --COMMENTS-- : Might be a mining virus. Check your task manager to see if your pc uses CPU, GPU or HDD at or around %100 capacity and which application uses it if it does.\n",
+      "Edit 2: So, I disabled the touchpad in setting, but when I was watching youtube and touched it, it made a drill bit kinda sound. When I did a big swipe, it freezed and the sound kept going indefinitely so I turned of the computer.\n",
+      "COMMENTAIRES:\n",
+      "Might be a mining virus. Check your task manager to see if your pc uses CPU, GPU or HDD at or around %100 capacity and which application uses it if it does.\n",
       "[deleted]\n",
       "It’s speaking Minecraft enchantment table. Not sure what to do.\n",
       "[deleted]\n",
@@ -416,7 +437,9 @@
       "\n",
       "M.2 SSD : WD Blue M.2 1TB\n",
       "\n",
-      "HDD : WD Blue 1TB 7200 RPM --COMMENTS-- : Might be an issue with a driver installed from windows update : sometime they are not well tested, especially if you got recent hardware. \n",
+      "HDD : WD Blue 1TB 7200 RPM\n",
+      "COMMENTAIRES:\n",
+      "Might be an issue with a driver installed from windows update : sometime they are not well tested, especially if you got recent hardware. \n",
       "Maybe try to use driver provided by asus on them website, and block update from driver and firmware install in winupdate\n",
       "[removed]\n",
       "Hey this might not be it but I had a similar issue with my similar ram\n",
@@ -492,7 +515,9 @@
       "\n",
       "File:\\\\Windows\\System32\\Drivers\\Ntfs.sys \n",
       "\n",
-      "Is there any way to get a new version of the faulty driver on to a USB or something? --COMMENTS-- : Create a [Win10 recovery disk](https://support.microsoft.com/en-us/help/15088/windows-10-create-installation-media) on USB and use it to repair your Windows installation.\n",
+      "Is there any way to get a new version of the faulty driver on to a USB or something?\n",
+      "COMMENTAIRES:\n",
+      "Create a [Win10 recovery disk](https://support.microsoft.com/en-us/help/15088/windows-10-create-installation-media) on USB and use it to repair your Windows installation.\n",
       "If you are able to get the system to boot into Windows, I would recommend running a check on the hard drive as well as running system file checker.  Both, along with a lot of other suggestions are outlined at  [https://www.easeus.com/resource/fix-ntfs.sys-missing-or-corrupt.html](https://www.easeus.com/resource/fix-ntfs.sys-missing-or-corrupt.html)\n",
       "I have been getting a bunch of systems in that have been getting inconsistant BSOD. Turns out that brown outs in my area are screwing with'em while they were asleep. Try a power cycle.\n",
       "Ntfs.sys\n",
@@ -530,14 +555,14 @@
     "# Afficher les documents trouvés\n",
     "for result in results:\n",
     "    print(\n",
-    "        f\"Document : {result.page_content} --COMMENTS-- : {result.metadata['comments']}\"\n",
+    "        f\"Document : {result.page_content}\\nCOMMENTAIRES:\\n{result.metadata['comments']}\"\n",
     "    )"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
