--- a/naive_rag.ipynb
+++ b/naive_rag.ipynb
@@ -293,9 +293,9 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "# llm = OllamaLLM()\n",
+    "llm = OllamaLLM()\n",
     "\n",
-    "llm = ChatOpenAI(openai_api_key=OPENAI_KEY, model=\"gpt-4.1\", temperature=0.5)"
+    "# llm = ChatOpenAI(openai_api_key=OPENAI_KEY, model=\"gpt-4.1\", temperature=0.5)"
    ]
   },
   {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "02559079",
    "metadata": {},
    "outputs": [
@@ -434,93 +434,24 @@
       "url: https://www.ifixit.com/Guide/Repair+LCD+screen/95912\n",
       "guideid: 95912\n",
       "\n",
-      "---\n",
-      "🔍 **Analyse du problème** :\n",
+      "🔍 **Analyse du problème** : L'utilisateur a posé la question de comment réparer l'écran de son iPhone 12. En analysant les guides techniques et les posts Reddit disponibles, il est clair que l'opération de réparation de l'écran de l'iPhone 12 nécessite un certain niveau d'expertise technique et des outils appropriés.\n",
       "\n",
-      "L'utilisateur souhaite réparer l'écran d'un iPhone 12, qui peut impliquer le remplacement ou la rénovation du module écran (OLED + vitre + bezel). Cette opération est délicate, car l'écran intègre plusieurs composants fragiles (flex, capteur de proximité, haut-parleur d’oreille, etc.). Les guides techniques détaillent chaque étape, de l’inspection initiale à la réinstallation, en soulignant les points sensibles et les outils nécessaires. Les retours d'expérience de la communauté insistent sur la prudence, notamment lors de la manipulation des nappes et du retrait du bezel.\n",
+      "✅ **Vérifications préalables recommandées** : Avant de commencer la procédure, il est important de vérifier que le trouble se produit en effet à l'écran, et non pas à d'autres parties du téléphone. Il est également essentiel de prendre soin de ne pas endommager les autres composants de l'iPhone pendant la procédure de réparation.\n",
       "\n",
-      "---\n",
+      "📝 **Procédure détaillée proposée** : Les étapes suivantes peuvent être utilisées pour réparer l'écran de votre iPhone 12 :\n",
       "\n",
-      "✅ **Vérifications préalables recommandées** :\n",
+      "* Effectuez une inspection cosmetique de l'écran pour vérifier que les dommages ne soient pas seulement superficiels.\n",
+      "* Testez le fonctionnement du touchscreen, des touches physiques et des fonctions de 3D Touch (si présentes).\n",
+      "* Chauffez le côté inverse de l'écran et utilisez une pince à soupape pour séparer l'écran de la trame vibrante.\n",
+      "* Enlevez les connexions flexibles et autres composants qui sont fixés à l'arrière de l'écran.\n",
+      "* Séparez l'écran de la couche supérieure en utilisant un ciseau de précision, puis séparez l'écran du cadre avec une lame de rasage.\n",
+      "* Aplatissez le produit adhésif remouillable sur le cadre et utilisez-le pour détacher le cadre de l'écran.\n",
+      "* Vérifiez que tous les composants sont en place avant d'assembler l'écran dans la boîte à nouilles et de revenir à l'utilisation normale de votre iPhone 12.\n",
       "\n",
-      "1. **Test de l'écran** : Vérifiez que l'affichage, le tactile et la 3D Touch fonctionnent encore, même partiellement.\n",
-      "2. **Inspection cosmétique** : Identifiez les zones endommagées (fissures, pixels morts, etc.).\n",
-      "3. **Sauvegarde des données** : Sauvegardez toutes les données importantes de l’iPhone avant toute intervention.\n",
-      "4. **Outils nécessaires** : Préparez les outils adaptés : séparateur d’écran, lame fine (razor blade), fil de découpe, machine à bulles, lampe UV, adhésif OCA, etc.\n",
-      "5. **Espace de travail propre** : Travaillez dans un environnement propre et bien éclairé pour éviter l’introduction de poussières lors de la pose du nouvel écran ou de la vitre.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "📝 **Procédure détaillée proposée** :\n",
-      "\n",
-      "**D’après le guide iFixit \"iPhone 12 Screen Refurbishment\"** ([source](https://www.ifixit.com/Guide/iPhone+12+Screen+Refurbishment/138992)) :\n",
-      "\n",
-      "**Étape 1 : Inspection et préparation**\n",
-      "- Inspectez l’écran pour localiser les dommages. Notez que le bezel de l’iPhone 12 est plus fin et plus facile à démonter que sur les modèles précédents.\n",
-      "\n",
-      "**Étape 2 : Test de l’écran**\n",
-      "- Testez toutes les fonctions (affichage, tactile, capteurs) avant de démonter.\n",
-      "\n",
-      "**Étape 3 : Chauffage et retrait du haut-parleur d’oreille**\n",
-      "- Placez l’écran à l’envers sur un séparateur chauffant (100°C).\n",
-      "- Chauffez la zone du haut-parleur d’oreille pour ramollir l’adhésif.\n",
-      "- Retirez délicatement la nappe du haut-parleur d’oreille (très fragile).\n",
-      "\n",
-      "**Étape 4 : Retrait du bezel**\n",
-      "- Appliquez un dissolvant d’adhésif sur le contour du bezel.\n",
-      "- Utilisez une lame fine pour séparer le bezel du reste de l’écran, en ajoutant du dissolvant si nécessaire.\n",
-      "- Décollez prudemment le bezel, attention aux parties en plastique très fragiles.\n",
-      "\n",
-      "**Étape 5 : Séparation du flex**\n",
-      "- Utilisez un film fin pour détacher la nappe du flex sans l’endommager.\n",
-      "\n",
-      "**Étape 6 : Nettoyage des adhésifs**\n",
-      "- Retirez les résidus d’adhésif, notamment sur la zone du haut-parleur d’oreille.\n",
-      "\n",
-      "**Étape 7 : Séparation OLED/vitre**\n",
-      "- Avec un fil de découpe, séparez l’OLED de la vitre brisée.\n",
-      "\n",
-      "**Étape 8 : Nettoyage de l’OLED**\n",
-      "- Placez l’OLED sur la plateforme chauffante.\n",
-      "- Retirez l’adhésif OCA restant à l’aide d’un outil électrique ou manuellement.\n",
-      "\n",
-      "**Étape 9 : Test intermédiaire**\n",
-      "- Reconnectez l’OLED et le flex du haut-parleur pour vérifier que tout fonctionne (affichage, tactile, capteurs).\n",
-      "\n",
-      "**Étape 10 : Pose de la nouvelle vitre**\n",
-      "- Appliquez un nouvel adhésif OCA sur la vitre.\n",
-      "- Placez l’ensemble dans une machine à bulles puis sous une lampe UV pour fixer l’adhésif.\n",
-      "\n",
-      "**Étape 11-12 : Alignement et laminage**\n",
-      "- Alignez manuellement la vitre sur l’OLED si vous n’avez pas de moule spécifique.\n",
-      "- Placez l’écran sur une mousse de laminage adaptée.\n",
-      "\n",
-      "**Étape 13 : Laminage**\n",
-      "- Passez l’écran dans la machine de laminage pour coller la vitre.\n",
-      "\n",
-      "**Étape 14 : Dégazage et finition**\n",
-      "- Remettez l’écran dans la machine à bulles (10 min) puis sous lampe UV (180 sec) pour parfaire la fixation.\n",
-      "- Réinstallez l’écran sur l’iPhone et vérifiez toutes les fonctions.\n",
-      "\n",
-      "---\n",
-      "\n",
-      "💡 **Conseils supplémentaires ou précautions à prendre** :\n",
-      "\n",
-      "- **Fragilité des nappes** : Les flex du haut-parleur d’oreille et des capteurs sont très sensibles à la chaleur et à la traction. Manipulez-les avec une extrême précaution.\n",
-      "- **Qualité des pièces** : Utilisez des pièces de remplacement (vitre, OCA, bezel) de qualité pour garantir la durabilité de la réparation.\n",
-      "- **Propreté** : Toute trace de poussière ou bulle d’air entre la vitre et l’OLED sera visible après réparation. Travaillez dans un environnement propre et utilisez des gants si possible.\n",
-      "- **Alignement** : Si vous n’avez pas de moule d’alignement spécifique à l’iPhone 12, soyez particulièrement attentif à l’alignement manuel de la vitre.\n",
-      "- **Testez avant de refermer** : Toujours tester toutes les fonctionnalités (affichage, tactile, Face ID, capteurs) avant de refermer définitivement l’appareil.\n",
-      "\n",
-      "---\n",
+      "💡 **Conseils supplémentaires ou précautions à prendre** : Les étapes décrites ci-dessus sont basées sur le guide technique \"iPhone 12 Screen Refurbishment\" disponible sur iFixit. Il est important de noter que cette procédure nécessite un certain niveau d'expertise et des outils appropriés. Si vous n'avez aucune expérience avec la réparation de téléphones, il est conseillé de demander l'aide d'un professionnel ou d'une entreprise spécialisée dans la réparation de téléphones. Il est également important de prendre soin lors du transport et de l'utilisation de votre iPhone 12 pour éviter tout dommage supplémentaire pendant le processus de réparation.\n",
       "\n",
       "🔗 **Sources consultées** :\n",
-      "\n",
-      "- Guide iFixit \"iPhone 12 Screen Refurbishment\" : https://www.ifixit.com/Guide/iPhone+12+Screen+Refurbishment/138992\n",
-      "\n",
-      "---\n",
-      "\n",
-      "**Remarque** : Cette opération nécessite des compétences techniques avancées et des outils spécialisés. Si vous n’êtes pas expérimenté, il est conseillé de confier la réparation à un professionnel.\n"
+      "- Guide technique : [iFixit - iPhone 12 Screen Refurbishment](https://www.ifixit.com/Guide/iPhone+12+Screen+Refurbishment/138992)\n"
      ]
     }
    ],
